--- a/DjangoWebProject1/callerid/templates/callerid/callerid.html
+++ b/DjangoWebProject1/callerid/templates/callerid/callerid.html
@@ -77,7 +77,7 @@
       <p>Filter: <b>megaco.pkgdname == "andisp/dwa"</b></p>
       <p>Далее копируете значения поля <em>ddb</em>=<b>040E31323234313435373631313230302A</b></p>
       <p>в строку ввода <b>CallerId</b> и нажмите кнопку <b>Дешифровать</b></p>
-      <img src="{% static 'callerid/fonts/CallerID_pcap.png' %}" alt="" width="100%">
+      <img src="{% static 'callerid/fonts/CallerID_pcap.png' %}" alt=""  width="100">
 
     </div>
   </div>
