коррекция кода iakratel

--- a/DjangoWebProject1/iskratel/templates/iskratel.html
+++ b/DjangoWebProject1/iskratel/templates/iskratel.html
@@ -6,11 +6,11 @@
     <meta charset="utf-8">
     {% load staticfile %}
     <link rel="stylesheet" type="text/css" href="{% static 'iskratel/content/bootstrap.css'%}">
-    <link rel="stylesheet" type="text/css" href="{% static 'iskratel/content/work.css' %}">
-    <script src="{% static 'iskratel/content/scripts/jquery-2.2.0.js' %}"></script>
-    <script src="{% static 'iskratel/content/scripts/nav2.2.js' %}"></script>
-    <script src="{% static 'iskratel/content/scripts/bootstrap.js' %}"></script>
-    <script src="{% static 'iskratel/content/scripts/iskratel.js' %}"></script>
+    <link rel="stylesheet" type="text/css" href="{% static 'iskratel/content/iskratel.css' %}">
+    <script src="{% static 'iskratel/scripts/jquery-2.2.0.js' %}"></script>
+    <script src="{% static 'iskratel/scripts/nav2.2.js' %}"></script>
+    <script src="{% static 'iskratel/scripts/bootstrap.js' %}"></script>
+    <script src="{% static 'iskratel/scripts/iskratel.js' %}"></script>
 </head>
 
 <body>
