завершена работа приложения с callerid Megaco&H248 первая редакция

--- a/DjangoWebProject1/iskratel/templates/iskratel/baseiskratel.html
+++ b/DjangoWebProject1/iskratel/templates/iskratel/baseiskratel.html
@@ -31,7 +31,7 @@
                     <div class="tab-content">
                         <div role="tabpanel" id="si3000_v6" class="tab-pane active">
                             <ul class="nav of nav-stacked" id="navigation1">
-                                <li><a class="pane" href="CallerID/callerid.html">Дешифратор CallerID в протоколе MEGACO & H248</a></li>
+                                <li><a class="pane" href="callerid.html">Дешифратор CallerID в протоколе MEGACO & H248</a></li>
                                 <li><a class="pane" href="#">SI3000_v6</a></li>
                                 <li><a class="pane" href="#">3</a>
                                     <div class="submenu">
@@ -46,7 +46,7 @@
                         </div>
                         <div role="tabpanel" id="si3000_v5" class="tab-pane">
                             <ul class="nav of nav-stacked">
-                                <li><a class="pane" href="CallerID/callerid.html">Дешифратор CallerID в протоколе MEGACO & H248</a></li>
+                                <li><a class="pane" href="callerid.html">Дешифратор CallerID в протоколе MEGACO & H248</a></li>
                                 <li><a class="pane" href="#">SI3000_v5</a></li>
                                 <li><a class="pane" href="#">3</a></li>
                             </ul>
@@ -84,7 +84,7 @@
                         </div>
                         <div role="tabpanel" id="utility" class="tab-pane">
                             <ul class="nav of nav-stacked">
-                                <li><a class="pane" href="CallerID/callerid.html">Дешифратор CallerID в протоколе MEGACO & H248</a></li>
+                                <li><a class="pane" href="callerid.html">Дешифратор CallerID в протоколе MEGACO & H248</a></li>
                                 <li><a class="pane" href="#">2</a></li>
                                 <li><a class="pane" href="#">3</a></li>
                                 <li><a class="pane" href="#">4</a></li>
