--- a/DjangoWebProject1/iskratel/static/iskratel/content/callerid_style.css
+++ b/DjangoWebProject1/iskratel/static/iskratel/content/callerid_style.css
@@ -1,32 +1,23 @@
-#calleridnavbar {
+#calleridnavbar .navbar {
     position: relative;
     border-radius: 10px;
-
 }
-
-#content > .container {
-    min-height: 10px;
+.navbar-fixed-top{
+    z-index:0;
+}
+#calleridnavbar .container{
     background-color: #333;
-}
-
-#calleridnavbar .navbar-inverse{
-    background-color: #222;
-    border-color: #080808;
+     min-height: 0px;
 }
 #calleridnavbar .navbar-header {
     float: none;
-    
 }
-
-
-
 #calleridnavbar .navbar-brand {
     font-weight: bold;
     float: none;
     text-align: center;
     
 }
-
 #buttonDecode {
     margin-top: 15px;
 }
