--- a/DjangoWebProject1/iskratel/static/iskratel/content/iskratel.css
+++ b/DjangoWebProject1/iskratel/static/iskratel/content/iskratel.css
@@ -31,8 +31,10 @@
 }
 
 .jumbotron .row .col-md-10 .container {
-    width: 100%
+    width: 100%;
+
 }
+
 
 .jumbotron .container {
     position: relative;
