--- a/DjangoWebProject1/iskratel/templates/iskratel/callerid.html
+++ b/DjangoWebProject1/iskratel/templates/iskratel/callerid.html
@@ -6,13 +6,13 @@
   <script src="{% static 'iskratel/scripts/callerid.js' %}" ></script>
 </head>
 <body>
-  <div class="navbar  navbar-inverse navbar-fixed-top" role="navigation" >
+  {#<div class="navbar  navbar-inverse navbar-fixed-top" role="navigation" >
     <div class="container">
       <div class="navbar-header">
         <div class="navbar-brand"><p>CallerId (АОН) & MEGACO(H248) Дешифровка номера</p></div>
       </div>
     </div>
-  </div>
+  </div>#}
   <div class="jumbotron">
     <div class="container">
       <form class="form-horizontal" role="form" id="formCallerId">
