--- a/DjangoWebProject1/iskratel/templates/iskratel/baseiskratel.html
+++ b/DjangoWebProject1/iskratel/templates/iskratel/baseiskratel.html
@@ -14,16 +14,8 @@
 </head>
 
 <body>
-    <div class="header">
-        <div class="container">
-            <ul id="mytab" class="nav nav-tabs navbar-fixed-top" role="tablist">
-                <li class="active" role="presentation"><a href="#si3000_v6" role="tab" data-toggle="tab">SI3000 V6</a></li>
-                <li role="presentation"><a href="#si3000_v5" role="tab" data-toggle="tab">SI3000 V5</a></li>
-                <li role="presentation"><a href="#si3000_mn" role="tab" data-toggle="tab">SI3000 MN</a></li>
-                <li role="presentation"><a href="#utility" role="tab" data-toggle="tab">Утилиты</a></li>
-            </ul>
-        </div>
-    </div>
+    {% block header %}
+    {% endblock %}
     <div class="jumbotron">
         <div class="row">
             <div class="col-md-2">
