--- a/DjangoWebProject1/iskratel/templates/iskratel/callerid.html
+++ b/DjangoWebProject1/iskratel/templates/iskratel/callerid.html
@@ -1,8 +1,9 @@
-﻿{% extends "iskratel/baseiskratel.html" %}
+﻿{% extends "iskratel/iskratel.html" %}
 {% block content %}
   {% load staticfiles %}
   <link rel="stylesheet" href="{% static 'iskratel/content/callerid_style.css' %}">
   <script src="{% static 'iskratel/scripts/callerid.js' %}" ></script>
+
   <div id="calleridnavbar">
   <div class="navbar  navbar-inverse navbar-fixed-top" role="navigation" >
     <div class="container">
@@ -51,14 +52,12 @@
                 data-toggle="modal" data-target="#ModalHelp">Помощь</button>
       </div>
     </div>
-    
     <div class="form-group">
       <div class="col-sm-offset-2 col-sm-10">
         <textarea class="form-control" rows="8"  id="inputDecode" placeholder="Детализация"></textarea>
         <button type="submit" id="buttonDecode" class="btn btn-primary">Открыть детализацию</button>
       </div>
     </div>   
-    
 <div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true" id='ModalHelp'>
   <div class="modal-dialog modal-lg">
     <div class="modal-content">
@@ -66,15 +65,11 @@
       <p>Filter: <b>megaco.pkgdname == "andisp/dwa"</b></p>
       <p>Далее копируете значения поля <em>ddb</em>=<b>040E31323234313435373631313230302A</b></p>
       <p>в строку ввода <b>CallerId</b> и нажмите кнопку <b>Дешифровать</b></p>
-      <img src="{% static 'iskratel/fonts/CallerID_pcap.png' %}" alt=""  width="100%">
-
+      <img src="{% static 'iskratel/fonts/CallerID_pcap.png' %}" alt=""  width="100%" />
     </div>
   </div>
 </div>
-
 </form>
-
 </div> 
-
 
 {% endblock %}
