--- a/DjangoWebProject1/iskratel/templates/iskratel/callerid.html
+++ b/DjangoWebProject1/iskratel/templates/iskratel/callerid.html
@@ -1,5 +1,4 @@
-﻿{% extends "iskratel/iskratel.html" %}
-{% block content %}
+﻿{% block content %}
   {% load staticfiles %}
   <link rel="stylesheet" href="{% static 'iskratel/content/callerid_style.css' %}">
   <script src="{% static 'iskratel/scripts/callerid.js' %}" ></script>
