--- a/DjangoWebProject1/iskratel/templates/iskratel/utilitymenu.html
+++ b/DjangoWebProject1/iskratel/templates/iskratel/utilitymenu.html
@@ -1,9 +1,6 @@
-﻿{% extends "iskratel/iskratel.html" %}
-{% block leftmenu %}
-    <div role="tabpanel" id="utility" class="tab-pane">
-       <ul class="nav of nav-stacked">
+﻿{% block utilitymenu %}   
                                 <li><a class="pane" href="callerid.html">Дешифратор CallerID в протоколе MEGACO & H248</a></li>
-                                <li><a class="pane" href="#">2</a></li>
+                                <li><a class="pane" href="#">2паевку</a></li>
                                 <li><a class="pane" href="#">3</a></li>
                                 <li><a class="pane" href="#">4</a></li>
                                 <li><a class="pane" href="#">5</a></li>
@@ -27,6 +24,4 @@
                                 <li><a class="pane" href="#">23</a></li>
                                 <li><a class="pane" href="#">24</a></li>
                                 <li><a class="pane" href="#">25</a></li>
-                            </ul>
-    </div>
 {% endblock %}
