--- a/DjangoWebProject1/iskratel/templates/iskratel/baseiskratel.html
+++ b/DjangoWebProject1/iskratel/templates/iskratel/baseiskratel.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" type="text/css" href="{% static 'iskratel/content/bootstrap.css'%}">
     <link rel="stylesheet" type="text/css" href="{% static 'iskratel/content/iskratel.css' %}">
     <script src="{% static 'iskratel/scripts/jquery-2.2.0.js' %}"></script>
-    <script src="{% static 'iskratel/scripts/nav2.2.js' %}"></script>
+    {#<script src="{% static 'iskratel/scripts/nav2.2.js' %}"></script>#}
     <script src="{% static 'iskratel/scripts/bootstrap.js' %}"></script>
     <script src="{% static 'iskratel/scripts/iskratel.js' %}"></script>
 </head>
 <body>
     {% block header %}
     {% endblock %}
-    {% block jumbotron %}
+    {% block page %}
     {% endblock %}
     {% block footer %}
     {% endblock %}
