--- a/DjangoWebProject1/iskratel/templates/iskratel/callerid.html
+++ b/DjangoWebProject1/iskratel/templates/iskratel/callerid.html
@@ -1,4 +1,5 @@
-﻿{% block content %}
+﻿{% extends 'iskratel/utility.html' %}
+{% block content %}
   {% load staticfiles %}
   <link rel="stylesheet" href="{% static 'iskratel/content/callerid_style.css' %}">
   <script src="{% static 'iskratel/scripts/callerid.js' %}" ></script>
