--- a/DjangoWebProject1/iskratel/templates/iskratel/iskratel.html
+++ b/DjangoWebProject1/iskratel/templates/iskratel/iskratel.html
@@ -3,78 +3,37 @@
     <div class="header">
         <div class="container">
             <ul id="mytab" class="nav nav-tabs navbar-fixed-top" role="tablist">
-                <li role="presentation"><a href="#si3000_v6" role="tab" data-toggle="tab">SI3000 V6</a></li>
-                <li role="presentation"><a href="#si3000_v5" role="tab" data-toggle="tab">SI3000 V5</a></li>
-                <li role="presentation"><a href="#si3000_mn" role="tab" data-toggle="tab">SI3000 MN</a></li>
-                <li ><a href="#utility" role="tab" data-toggle="tab">Утилиты</a></li>
+                <li  {% block si3000_v6active %}{% endblock %}role="presentation"><a href="#si3000_v6" role="tab" data-toggle="tab">SI3000 V6</a></li>
+                <li  {% block si3000_v5active %}{% endblock %}role="presentation"><a href="#si3000_v5" role="tab" data-toggle="tab">SI3000 V5</a></li>
+                <li  {% block si3000_mnactive %}{% endblock %}role="presentation"><a href="#si3000_mn" role="tab" data-toggle="tab">SI3000 MN</a></li>
+                <li  {% block utilityactive %}{% endblock %} role="presentation"><a href="#utility" role="tab" data-toggle="tab">Утилиты</a></li>
             </ul>
         </div>
       </div>
 {% endblock %}
-{% block jumbotron %}
+{% block page %}
     <div class="jumbotron">
         <div class="row">
          <div class="col-md-2">
             <div class="container">
                     <div class="tab-content">
-                        <div role="tabpanel" id="si3000_v6" class="tab-pane active">
+                        <div role="tabpanel" id="si3000_v6" class="tab-pane {% block si3000_v6tabact %}{% endblock %}">
                             <ul class="nav of nav-stacked" id="navigation1">
-                                <li><a class="pane" href="CallerID/callerid.html">Дешифратор CallerID в протоколе MEGACO & H248</a></li>
-                                <li><a class="pane" href="#">SI3000_v6</a></li>
-                                <li><a class="pane" href="#">3</a>
-                                    <div class="submenu">
-                                        <ul class="nav of nav-stacked">
-                                            <li><a class="pane" href="#">CCS</a></li>
-                                            <li><a class="pane" href="#">CS</a></li>
-                                            <li><a class="pane" href="#">MG</a></li>
-                                        </ul>
-                                    </div>
-                                </li>
+                                {% include "iskratel/si3000_V6menu.html" %}
                             </ul>
                         </div>
-                        <div role="tabpanel" id="si3000_v5" class="tab-pane">
+                        <div role="tabpanel" id="si3000_v5" class="tab-pane {% block si3000_v5tabact %}{% endblock %}">
                             <ul class="nav of nav-stacked">
-                                <li><a class="pane" href="callerid.html">Дешифратор CallerID в протоколе MEGACO & H248</a></li>
-                                <li><a class="pane" href="#">SI3000_v5</a></li>
-                                <li><a class="pane" href="#">3</a></li>
+                              {% include "iskratel/si3000_V5menu.html" %}  
                             </ul>
                         </div>
-                        <div role="tabpanel" id="si3000_mn" class="tab-pane">
+                        <div role="tabpanel" id="si3000_mn" class="tab-pane {% block si3000_mntabact %}{% endblock %}">
                             <ul class="nav of nav-stacked" id="navigation">
-                                {% include "iskratel/si3000_mn.html" %}
-                                <!-- 
-                                <li><a class="pane" href="#">MN_V5</a>
-                                    <ul class="nav of nav-stacked">
-                                        <li><a class="pane" href="#">Сбор информации с MNV5</a></li>
-                                        <li><a class="pane" href="#">Bacula</a></li>
-                                        <li><a class="pane" href="#">DNS</a></li>
-                                    </ul>
-                                </li>
-                                <li><a class="pane" href="#">MN_6031</a>
-                                    <ul class="nav of nav-stacked">
-                                        <li><a class="pane" href="#">Сбор информации с MN6031</a></li>
-                                        <li><a class="pane" href="#">Bacula</a></li>
-                                        <li><a class="pane" href="#">DNS</a></li>
-                                    </ul>
-                                </li>
-                                <li><a class="pane" href="#">MNS</a>
-                                    <ul class="nav of nav-stacked">
-                                        <li><a class="pane" href="#">Сбор информации с MNS</a></li>
-                                        <li><a class="pane" href="#">Bacula</a></li>
-                                        <li><a class="pane" href="#">SPAG</a></li>
-                                        <li><a class="pane" href="#">FMS</a></li>
-                                        <li><a class="pane" href="#">PQMP</a></li>
-                                        <li><a class="pane" href="#">DNS</a></li>
-                                        <li><a class="pane" href="#">NTP</a></li>
-                                        <li><a class="pane" href="#">DHCP</a></li>
-                                        <li><a class="pane" href="#">Миграция</a></li>
-                                    </ul>
-                                </li>
+                                {% include "iskratel/si3000_mnmenu.html" %}
                             </ul>
-                                    -->
                         </div> 
-                        <div role="tabpanel" id="utility" class="tab-pane">
-                            <ul class="nav of nav-stacked">
+                        <div role="tabpanel" id="utility" class="tab-pane {% block utilitytabact %}{% endblock %}  ">
+                            <ul class="nav of nav-stacked" id="navigation" >
                                 {% include "iskratel/utilitymenu.html" %}
                             </ul>
                         </div>                
