--- a/DjangoWebProject1/iskratel/templates/iskratel/utilitymenu.html
+++ b/DjangoWebProject1/iskratel/templates/iskratel/utilitymenu.html
@@ -1,27 +1,5 @@
 ﻿{% block utilitymenu %}   
                                 <li><a class="pane" href="callerid.html">Дешифратор CallerID в протоколе MEGACO & H248</a></li>
-                                <li><a class="pane" href="#">2паевку</a></li>
-                                <li><a class="pane" href="#">3</a></li>
-                                <li><a class="pane" href="#">4</a></li>
-                                <li><a class="pane" href="#">5</a></li>
-                                <li><a class="pane" href="#">6</a></li>
-                                <li><a class="pane" href="#">7</a></li>
-                                <li><a class="pane" href="#">8</a></li>
-                                <li><a class="pane" href="#">9</a></li>
-                                <li><a class="pane" href="#">10</a></li>
-                                <li><a class="pane" href="#">11</a></li>
-                                <li><a class="pane" href="#">12</a></li>
-                                <li><a class="pane" href="#">13</a></li>
-                                <li><a class="pane" href="#">14</a></li>
-                                <li><a class="pane" href="#">15</a></li>
-                                <li><a class="pane" href="#">16</a></li>
-                                <li><a class="pane" href="#">17</a></li>
-                                <li><a class="pane" href="#">18</a></li>
-                                <li><a class="pane" href="#">19</a></li>
-                                <li><a class="pane" href="#">20</a></li>
-                                <li><a class="pane" href="#">21</a></li>
-                                <li><a class="pane" href="#">22</a></li>
-                                <li><a class="pane" href="#">23</a></li>
-                                <li><a class="pane" href="#">24</a></li>
-                                <li><a class="pane" href="#">25</a></li>
+                                <li><a class="pane" href="readnode.html#">ReadNode - парсинг экспорта</a></li>
+                                
 {% endblock %}
