--- a/DjangoWebProject1/iskratel/templates/iskratel/callerid.html
+++ b/DjangoWebProject1/iskratel/templates/iskratel/callerid.html
@@ -1,4 +1,5 @@
 ﻿{% extends 'iskratel/utility.html' %}
+{% block callerid %} selected {% endblock %}
 {% block content %}
   {% load staticfiles %}
   <link rel="stylesheet" href="{% static 'iskratel/content/callerid_style.css' %}">
