--- a/DjangoWebProject1/iskratel/templates/iskratel/readnode.html
+++ b/DjangoWebProject1/iskratel/templates/iskratel/readnode.html
@@ -1,4 +1,5 @@
 ﻿{% extends 'iskratel/utility.html' %}
+{% block readnode %} selected {% endblock %}
 {% block content %}
   {% load staticfiles %}
     <p>Здесь будет работать скрипт парсинга экспорта узлов NE CS,MG,CCS</p>
