--- a/DjangoWebProject1/iskratel/templates/iskratel/iskratel.html
+++ b/DjangoWebProject1/iskratel/templates/iskratel/iskratel.html
@@ -33,9 +33,11 @@
                             </ul>
                         </div> 
                         <div role="tabpanel" id="utility" class="tab-pane {% block utilitytabact %}{% endblock %}  ">
-                            <ul class="nav of nav-stacked" id="navigation" >
-                                {% include "iskratel/utilitymenu.html" %}
-                            </ul>
+                            <ul class="nav of nav-stacked" id="navigation"  >
+                               <!-- {% include "iskratel/utilitymenu.html" %} -->
+                                <li><a class="pane {% block callerid %}{% endblock %}" href="callerid.html">Дешифратор CallerID в протоколе MEGACO & H248</a></li>
+                                <li><a class="pane {% block readnode %}{% endblock %}" href="readnode.html#">ReadNode - парсинг экспорта</a></li>
+                             </ul>
                         </div>                
                     </div>
                 </div>
