--- a/DjangoWebProject1/page/templates/index.html
+++ b/DjangoWebProject1/page/templates/index.html
@@ -4,15 +4,20 @@
 {% block main %} 
         <div id="main">
             <h2>{{ category.name }}</h2>
+            
             <table>
                 <tr>
                     <th>Название</th>
                     <th>Есть в наличии</th>
+                    <th>&nbsp</th>
+                    <th>&nbsp</th>
                 </tr>
-                {% for good in goods %}
+                {% for good in object_list %}
                     <tr>
                         <td><a href="{% url 'good' good_id=good.id %}">{{ good.name }}</a></td>
                         <td class="centered" >{% if good.in_stock %}+{% endif %}</td>
+                        {#<td class="centered"><a href="{% url 'good_edit' good_id=good_id %}">Изменить</a></td> #}
+                        {#<td class="centered"><a href="{% url 'good_delete' good_id=good_id %}">Удалить</a></td> #}
                     </tr>
                 {% endfor %}
             </table>
